--- a/module4-logistic-regression/LS_DS_214.ipynb
+++ b/module4-logistic-regression/LS_DS_214.ipynb
@@ -1907,7 +1907,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "6536a73b-d61f-4ed2-f296-07753f917441"
+        "outputId": "dd40d945-25c1-48b2-baba-7b87afc2035e"
       },
       "source": [
         "X_test = test[features]\n",
@@ -1916,7 +1916,7 @@
         "X_test_scaled = scalar.transform(X_test_imp)\n",
         "X_test_scaled"
       ],
-      "execution_count": 104,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1940,7 +1940,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 106
         }
       ]
     },
@@ -1960,15 +1960,143 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o3wtt808_n7N",
+        "id": "i9z8o8oaAMqg",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "submission['Survived'] = y_pred"
+        "y_pred = model.predict(X_test_scaled)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o3wtt808_n7N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "eb49e5fb-e18a-4a26-8ab3-2c16e7f7ff75"
+      },
+      "source": [
+        "submission['Survived'] = y_pred\n",
+        "submission"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PassengerId</th>\n",
+              "      <th>Survived</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>892</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>893</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>894</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>895</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>896</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>413</th>\n",
+              "      <td>1305</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>414</th>\n",
+              "      <td>1306</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>415</th>\n",
+              "      <td>1307</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>416</th>\n",
+              "      <td>1308</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>417</th>\n",
+              "      <td>1309</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>418 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     PassengerId  Survived\n",
+              "0            892         0\n",
+              "1            893         0\n",
+              "2            894         0\n",
+              "3            895         0\n",
+              "4            896         1\n",
+              "..           ...       ...\n",
+              "413         1305         0\n",
+              "414         1306         1\n",
+              "415         1307         0\n",
+              "416         1308         0\n",
+              "417         1309         0\n",
+              "\n",
+              "[418 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
     },
     {
       "cell_type": "code",
