--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
     }
    ],
    "source": [
-    "print('Validated Accuracy', model.score(X_val_imputed, y_val))"
+    "print('Validated Accuracy', model.score(X_val_imp, y_val))"
    ]
   },
   {
