--- a/LS_DS_214_assignment.ipynb
+++ b/LS_DS_214_assignment.ipynb
@@ -22,7 +22,10 @@
     "colab": {
       "name": "LS_DS_214_assignment.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "Hg1-HBQNsTRW",
+        "g0i1XTcH3CWR"
+      ],
       "include_colab_link": true
     }
   },
@@ -209,17 +212,17 @@
       "metadata": {
         "id": "QATbvlwpbcNB",
         "colab_type": "code",
+        "outputId": "dad37a28-601b-4afb-87a1-235d233ca33f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
-        },
-        "outputId": "2d4f06ff-fe1c-4fb4-c8ad-591cc77266be"
+        }
       },
       "source": [
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 235,
+      "execution_count": 350,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +643,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 235
+          "execution_count": 350
         }
       ]
     },
@@ -649,17 +652,17 @@
       "metadata": {
         "id": "l2XqO-cAiChL",
         "colab_type": "code",
+        "outputId": "86925933-4c8f-4201-ae64-1fd1aea9053c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "8bd397e8-3fb8-42bc-823e-d39581f56535"
+        }
       },
       "source": [
         "# look for nan values\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 236,
+      "execution_count": 351,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -730,7 +733,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 236
+          "execution_count": 351
         }
       ]
     },
@@ -739,17 +742,17 @@
       "metadata": {
         "id": "PLnH7lEji8bg",
         "colab_type": "code",
+        "outputId": "e89d1e90-9c35-462b-87cc-f0d498007732",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 334
-        },
-        "outputId": "3e158a65-ba22-4816-ecf1-00c647821dfd"
+        }
       },
       "source": [
         "# look at numeric columns\n",
         "df.describe()"
       ],
-      "execution_count": 237,
+      "execution_count": 352,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -992,7 +995,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 237
+          "execution_count": 352
         }
       ]
     },
@@ -1001,18 +1004,18 @@
       "metadata": {
         "id": "V8pCNOOYjsiw",
         "colab_type": "code",
+        "outputId": "63e630f2-c05b-4383-83d5-5f1b7258ee2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 210
-        },
-        "outputId": "c8bac839-3efc-4e41-ecde-82916dda8a8e"
+        }
       },
       "source": [
         "# look at categorical columns\n",
         "cat_cols = df.describe(exclude='number').columns.values[2:-1]\n",
         "df.describe(exclude='number')"
       ],
-      "execution_count": 238,
+      "execution_count": 353,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1268,7 +1271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 238
+          "execution_count": 353
         }
       ]
     },
@@ -1277,17 +1280,17 @@
       "metadata": {
         "id": "zp6fyqkxkIiN",
         "colab_type": "code",
+        "outputId": "fe45a6fa-983f-400b-f3ed-127d7f446b34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "46f2af29-004b-47d1-e505-d776e1267f41"
+        }
       },
       "source": [
         "# look at the values in categorical columns\n",
         "df['Chips'].value_counts()"
       ],
-      "execution_count": 239,
+      "execution_count": 354,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1303,7 +1306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 239
+          "execution_count": 354
         }
       ]
     },
@@ -1341,16 +1344,16 @@
       "metadata": {
         "id": "pJdoLo1CoYDt",
         "colab_type": "code",
+        "outputId": "9a2d5878-b8b5-4b5a-d0c2-be923b6b6cb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        },
-        "outputId": "ba1ef850-18f7-495b-d421-02599903d73a"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 242,
+      "execution_count": 357,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1764,7 +1767,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 242
+          "execution_count": 357
         }
       ]
     },
@@ -1796,11 +1799,11 @@
       "metadata": {
         "id": "f9RGUreNsYnu",
         "colab_type": "code",
+        "outputId": "53c87442-8e54-413b-b0c4-760aa3c1d5c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        },
-        "outputId": "40b80448-5fc4-4a9d-cb7b-36acc44d6803"
+        }
       },
       "source": [
         "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)\n",
@@ -1813,7 +1816,7 @@
         "\n",
         "train.shape, val.shape, test.shape"
       ],
-      "execution_count": 244,
+      "execution_count": 359,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1825,7 +1828,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 244
+          "execution_count": 359
         }
       ]
     },
@@ -1961,16 +1964,16 @@
       "metadata": {
         "id": "nNHR0qKc3Hxc",
         "colab_type": "code",
+        "outputId": "2901337f-34f4-499c-e496-09bb126bf7da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        },
-        "outputId": "16c13bec-51d0-4699-cc75-2f1505569692"
+        }
       },
       "source": [
         "y_train.value_counts()"
       ],
-      "execution_count": 252,
+      "execution_count": 366,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1984,7 +1987,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 252
+          "execution_count": 366
         }
       ]
     },
@@ -2007,18 +2010,18 @@
       "metadata": {
         "id": "ZbGysBjh3ewB",
         "colab_type": "code",
+        "outputId": "da6663d0-1fa3-4ece-adb1-fe875c2c01b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        },
-        "outputId": "8523d8ff-3f91-4794-fdfe-17e0ace4dc68"
+        }
       },
       "source": [
         "# baseline is about 59% accurate for training\n",
         "from sklearn.metrics import accuracy_score\n",
         "accuracy_score(y_train, y_pred_train)"
       ],
-      "execution_count": 254,
+      "execution_count": 368,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2030,7 +2033,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 254
+          "execution_count": 368
         }
       ]
     },
@@ -2039,11 +2042,11 @@
       "metadata": {
         "id": "dOFlirhI3wBW",
         "colab_type": "code",
+        "outputId": "e2c7131e-23bd-44dc-ec16-42378d3eb42e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        },
-        "outputId": "6cf31555-0f01-497c-c872-bd2723e8bdde"
+        }
       },
       "source": [
         "# 55% accurate for validation\n",
@@ -2051,7 +2054,7 @@
         "y_pred_val = [majority_class]*len(y_val)\n",
         "accuracy_score(y_val, y_pred_val)"
       ],
-      "execution_count": 255,
+      "execution_count": 369,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2063,7 +2066,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 255
+          "execution_count": 369
         }
       ]
     },
@@ -2082,11 +2085,11 @@
       "metadata": {
         "id": "F_KqaDqi4Ls9",
         "colab_type": "code",
+        "outputId": "5d0c8f41-dae8-4baf-8591-17f34b050b16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "7074b29c-9c31-4b7b-af0a-44dc04f58484"
+        }
       },
       "source": [
         "# Import, instantiate, and fit the model\n",
@@ -2094,7 +2097,7 @@
         "log_reg = LogisticRegression(solver='lbfgs')\n",
         "log_reg.fit(X_train_scl, y_train)"
       ],
-      "execution_count": 256,
+      "execution_count": 370,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2110,7 +2113,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 256
+          "execution_count": 370
         }
       ]
     },
@@ -2119,11 +2122,11 @@
       "metadata": {
         "id": "loCQUmpX4lYT",
         "colab_type": "code",
+        "outputId": "6b1f7c82-c3ac-4fbb-f722-cfd2a1dfe15c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "5db6dd74-3e0a-4908-d988-f6a80dfef0b8"
+        }
       },
       "source": [
         "# this model is 76% accurate\n",
@@ -2131,7 +2134,7 @@
         "print(log_reg.score(X_val_scl, y_val))\n",
         "accuracy_score(y_val_pred, y_val)"
       ],
-      "execution_count": 257,
+      "execution_count": 371,
       "outputs": [
         {
           "output_type": "stream",
@@ -2150,7 +2153,177 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 257
+          "execution_count": 371
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0GA5yHxyEKdj",
+        "colab_type": "code",
+        "outputId": "0834e7f1-f6fb-4713-b690-e6f0bebe3e44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "source": [
+        "# how many features is best to use?\n",
+        "# four features gives the best accuracy\n",
+        "from sklearn.feature_selection import SelectKBest, f_regression\n",
+        "for k in range(1, len(X_train_scl.columns)+1):\n",
+        "  selector = SelectKBest(score_func=f_regression, k=k)\n",
+        "  X_train_kbest = selector.fit_transform(X_train_scl, y_train)\n",
+        "  X_val_kbest = selector.transform(X_val_scl)\n",
+        "  log_reg.fit(X_train_kbest, y_train)\n",
+        "  score = log_reg.score(X_val_kbest, y_val)\n",
+        "  print(f'number of features: {k}, accuracy: {score}')"
+      ],
+      "execution_count": 383,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "number of features: 1, accuracy: 0.8117647058823529\n",
+            "number of features: 2, accuracy: 0.8470588235294118\n",
+            "number of features: 3, accuracy: 0.8705882352941177\n",
+            "number of features: 4, accuracy: 0.9176470588235294\n",
+            "number of features: 5, accuracy: 0.8705882352941177\n",
+            "number of features: 6, accuracy: 0.8941176470588236\n",
+            "number of features: 7, accuracy: 0.8823529411764706\n",
+            "number of features: 8, accuracy: 0.8470588235294118\n",
+            "number of features: 9, accuracy: 0.8705882352941177\n",
+            "number of features: 10, accuracy: 0.8470588235294118\n",
+            "number of features: 11, accuracy: 0.8470588235294118\n",
+            "number of features: 12, accuracy: 0.8588235294117647\n",
+            "number of features: 13, accuracy: 0.8352941176470589\n",
+            "number of features: 14, accuracy: 0.8470588235294118\n",
+            "number of features: 15, accuracy: 0.8352941176470589\n",
+            "number of features: 16, accuracy: 0.8352941176470589\n",
+            "number of features: 17, accuracy: 0.8235294117647058\n",
+            "number of features: 18, accuracy: 0.8235294117647058\n",
+            "number of features: 19, accuracy: 0.8352941176470589\n",
+            "number of features: 20, accuracy: 0.8352941176470589\n",
+            "number of features: 21, accuracy: 0.8352941176470589\n",
+            "number of features: 22, accuracy: 0.8352941176470589\n",
+            "number of features: 23, accuracy: 0.8352941176470589\n",
+            "number of features: 24, accuracy: 0.8235294117647058\n",
+            "number of features: 25, accuracy: 0.8235294117647058\n",
+            "number of features: 26, accuracy: 0.7647058823529411\n",
+            "number of features: 27, accuracy: 0.7647058823529411\n",
+            "number of features: 28, accuracy: 0.7647058823529411\n",
+            "number of features: 29, accuracy: 0.7647058823529411\n",
+            "number of features: 30, accuracy: 0.7647058823529411\n",
+            "number of features: 31, accuracy: 0.7764705882352941\n",
+            "number of features: 32, accuracy: 0.7764705882352941\n",
+            "number of features: 33, accuracy: 0.7764705882352941\n",
+            "number of features: 34, accuracy: 0.7764705882352941\n",
+            "number of features: 35, accuracy: 0.7529411764705882\n",
+            "number of features: 36, accuracy: 0.7529411764705882\n",
+            "number of features: 37, accuracy: 0.7529411764705882\n",
+            "number of features: 38, accuracy: 0.788235294117647\n",
+            "number of features: 39, accuracy: 0.788235294117647\n",
+            "number of features: 40, accuracy: 0.7764705882352941\n",
+            "number of features: 41, accuracy: 0.7529411764705882\n",
+            "number of features: 42, accuracy: 0.7529411764705882\n",
+            "number of features: 43, accuracy: 0.7529411764705882\n",
+            "number of features: 44, accuracy: 0.7411764705882353\n",
+            "number of features: 45, accuracy: 0.7411764705882353\n",
+            "number of features: 46, accuracy: 0.7411764705882353\n",
+            "number of features: 47, accuracy: 0.7411764705882353\n",
+            "number of features: 48, accuracy: 0.7411764705882353\n",
+            "number of features: 49, accuracy: 0.7411764705882353\n",
+            "number of features: 50, accuracy: 0.7529411764705882\n",
+            "number of features: 51, accuracy: 0.7529411764705882\n",
+            "number of features: 52, accuracy: 0.7647058823529411\n",
+            "number of features: 53, accuracy: 0.7647058823529411\n",
+            "number of features: 54, accuracy: 0.7647058823529411\n",
+            "number of features: 55, accuracy: 0.7647058823529411\n",
+            "number of features: 56, accuracy: 0.7647058823529411\n",
+            "number of features: 57, accuracy: 0.7647058823529411\n",
+            "number of features: 58, accuracy: 0.7647058823529411\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qcssjI2ZGKH1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "selector = SelectKBest(score_func=f_regression, k=4)\n",
+        "X_train_kbest = selector.fit_transform(X_train_scl, y_train)\n",
+        "X_val_kbest = selector.transform(X_val_scl)\n",
+        "X_test_kbest = selector.transform(X_test_scl)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pug9tdwQGoRc",
+        "colab_type": "code",
+        "outputId": "9a39affc-fbeb-44b9-96f3-d7169b44c4c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# which columns give us the best score?\n",
+        "mask = selector.get_support()\n",
+        "X_train_scl.columns[mask]"
+      ],
+      "execution_count": 385,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Meat', 'Fillings', 'Meat:filling', 'Synergy'], dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 385
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g_SzeDAFHKAn",
+        "colab_type": "code",
+        "outputId": "b85c5f5f-c38b-400b-aaad-56b0e40eb403",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "log_reg.fit(X_train_kbest, y_train)\n",
+        "log_reg.score(X_val_kbest, y_val)"
+      ],
+      "execution_count": 386,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9176470588235294"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 386
         }
       ]
     },
@@ -2169,18 +2342,18 @@
       "metadata": {
         "id": "l5mPTjSK910b",
         "colab_type": "code",
+        "outputId": "5b1f54a7-434a-4093-bb08-9ba61aad792b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b1865c54-3cb8-4ac7-cd62-af546b13b85f"
+        }
       },
       "source": [
         "# test is 70% accurate\n",
-        "log_reg.predict(X_test_scl)\n",
-        "log_reg.score(X_test_scl, y_test)"
+        "y_pred = log_reg.predict(X_test_kbest)\n",
+        "accuracy_score(y_pred, y_test)"
       ],
-      "execution_count": 258,
+      "execution_count": 387,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2192,7 +2365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 258
+          "execution_count": 387
         }
       ]
     }
